[package]
name = "kyss-bff"
version = "0.1.0"
edition = "2024"

[dependencies]
kyss-shared = { path = "../shared" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
