[package]
name = "kyss-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
kyss-shared = { path = "../shared" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "AbortController",
    "AbortSignal",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"
urlencoding = "2"
